--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "recharts": "^3.2.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
